--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -107,7 +107,7 @@
                             </div>
                             <div class="thread-preview-container">
                               <div class="mb-2" style="text-align:right">
-                                <small>{{subject.category}}</small>
+                                <small style="text-transform:capitalize">{{subject.category}}</small>
                                 <span>&middot;</span>
                                 <small>{{subject.dateString}}</small>
                                 <span>&middot;</span>
@@ -168,7 +168,7 @@
           </div>
           <div class="thread-preview-container">
             <div class="mb-2" style="text-align:right">
-              <small><% subject.category %></small>
+              <small style="text-transform:capitalize"><% subject.category %></small>
               <span>&middot;</span>
               <small><% subject.dateString %></small>
               <span>&middot;</span>
