--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -99,7 +99,7 @@
 
                         <div id="threads-container" class="col-md-9">
                           {{#threads.recent}}
-                          <div id="{{id}}" class="bg-white mb-4 thread-preview">
+                          <div id="{{slug}}" class="bg-white mb-4 thread-preview">
                             <div class="thread-preview-img" style="background: url('{{{subject.image}}}')">
                               <a target="_blank" href="{{subject.url}}">
                                 <img src="{{subject.image}}" />
@@ -160,7 +160,7 @@
       {{>auth}}
 
       <script type="text/template" id="tpl-thread-preview">
-        <div id="<%id%>" class="bg-white mb-4 thread-preview">
+        <div id="<%slug%>" class="bg-white mb-4 thread-preview">
           <div class="thread-preview-img" style="background: url('<%{subject.image}%>')">
             <a target="_blank" href="<% subject.url %>">
               <img src="<%{subject.image}%>" />
