green text for links

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -126,7 +126,7 @@
                                 <span>&middot;</span>
                                 <small>{{subject.dateString}}</small>
                                 <span>&middot;</span>
-                                <a href="/feed/{{slug}}"><small>Comments</small></a>
+                                <a href="/feed/{{slug}}"><small style="color:#03a87c">Comments</small></a>
                               </div>
                               <a style="color:#333" target="_blank" href="{{{subject.url}}}">
                                 <h4>{{subject.title}}</h4>
@@ -188,7 +188,7 @@
               <span>&middot;</span>
               <small><% subject.dateString %></small>
               <span>&middot;</span>
-              <a href="/feed/<% slug %>"><small>Comments</small></a>
+              <a href="/feed/<% slug %>"><small style="color:#03a87c">Comments</small></a>
             </div>
             <a style="color:#333" target="_blank" href="<%{subject.url}%>">
               <h4><% subject.title %></h4>
