add tech category

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -156,8 +156,9 @@
                               <input id="input-thread-title" style="background:#f9f9f9;border:none;padding:4px" class="form-control mb-3" type="text" placeholder="Title">
                               <textarea id="input-thread-description" style="background:#f9f9f9;border:none;padding:4px;resize: none;" rows="4" class="form-control mb-3" placeholder="Description"></textarea>
                               <select id="input-thread-category">
-                                <option value="sports">Sports</option>
                                 <option value="culture">Culture</option>
+                                <option value="sports">Sports</option>
+                                <option value="tech">Tech</option>
                               </select>
                               <div id="preview-image-container" style="margin-top:12px"></div>
                               <button id="btn-submit-thread" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3 mt-4">Submit</button>
