--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -147,6 +147,7 @@
           text: commentText,
           thread: thread.subject.id,
           op: thread.profile.id,
+          slug: thread.slug,
           site: (site==null) ? null : JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image}),
           profile: JSON.stringify({
             id: user.id,
