--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -146,6 +146,7 @@
         var comment = {
           text: commentText,
           thread: thread.subject.id,
+          title: thread.subject.title,
           op: thread.profile.id,
           slug: thread.slug,
           site: (site==null) ? null : JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image}),
