--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -148,7 +148,7 @@
           thread: thread.subject.id,
           title: thread.subject.title,
           op: thread.profile.id,
-          slug: thread.slug,
+          threadSlug: thread.slug,
           site: (site==null) ? null : JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image}),
           profile: JSON.stringify({
             id: user.id,
