--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -6,13 +6,13 @@
     <title>Vertex 360 | The Easiest Website Builder. Period.</title>
     <meta name="description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
 
-    <meta property="og:title" content="Vertex 360 | The Easiest Website Builder. Period." />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://www.vertex360.co" />
-    <meta property="og:image" content="https://lh3.googleusercontent.com/ZM_FCvAPcwUXd3NZJNpvA-t8jb4RQkkjVAKNXYk_SQHV155T-W36Ghos9W7iiTyxaiKzXl9Z2XhaABotatD3HomhAQ=s260-c" />
-    <meta property="og:image:width" content="260px" />
-    <meta property="og:image:height" content="260px" />
-    <meta property="og:description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
+    <meta property="og:title" content="Vertex 360 | Websites for the Modern Digital Age" />
+  	<meta property="og:type" content="article" />
+  	<meta property="og:url" content="https://www.vertex360.co" />
+  	<meta property="og:image" content="https://lh3.googleusercontent.com/ZM_FCvAPcwUXd3NZJNpvA-t8jb4RQkkjVAKNXYk_SQHV155T-W36Ghos9W7iiTyxaiKzXl9Z2XhaABotatD3HomhAQ=s260-c" />
+  	<meta property="og:image:width" content="260px" />
+  	<meta property="og:image:height" content="260px" />
+  	<meta property="og:description" content="Vertex 360 launches websites for influencers, YouTubers, content creators, startups, podcasters or anyone who want to expand their online brand." />
 
     {{>head}}
     <link rel="stylesheet" href="{{{cdn}}}/css/sidebar.css" />
