--- a/medium/community.mustache
+++ b/medium/community.mustache
@@ -230,11 +230,11 @@
                                   <img class="mb-0 w-75" style="border-radius:50%" src="{{{image}}}=s320-c" />
                                 </a>
 
-                                <h5 class="mt-3" style="margin-bottom:0px;">
+                                <h5 class="mt-3" style="margin-bottom:0px;line-height:0.3">
                                   <a style="text-decoration:none" href="/profile/{{slug}}">{{firstName}}</a>
                                 </h5>
-                                <small style="color:#999">{{username}}</small>
-                                <p>{{bio}}</p>
+                                <small style="color:#999;font-size:0.85rem">{{username}}</small>
+                                <p style="font-size:0.85rem;line-height:1.2rem;text-align:left;margin-top:12px;margin-bottom:0px">{{bio}}</p>
                               </div>
                           </article>
                           {{/profiles}}
