--- a/medium/community.mustache
+++ b/medium/community.mustache
@@ -234,7 +234,7 @@
                                   <a style="text-decoration:none" href="/profile/{{slug}}">{{firstName}}</a>
                                 </h5>
                                 <small style="color:#999;font-size:0.85rem">{{username}}</small>
-                                <p style="font-size:0.85rem;line-height:1.2rem;text-align:left;margin-top:12px;margin-bottom:0px">{{bio}}</p>
+                                <p style="height:20px;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-size:0.85rem;line-height:1.2rem;text-align:left;margin-top:12px;margin-bottom:0px">{{bio}}</p>
                               </div>
                           </article>
                           {{/profiles}}
