add community nav bar link

--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -15,6 +15,9 @@
 				<a class="nav-link" href="/feed">Feed</a>
 			</li>
 			<li class="nav-item">
+				<a class="nav-link" href="/community">Community</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" href="https://blog.vertex360.co">Blog</a>
 			</li>
 			<li class="nav-item" id="nav-login">
