convert to button

--- a/medium/profile.mustache
+++ b/medium/profile.mustache
@@ -290,7 +290,7 @@
           </div>
           <div style="flex:2">
             <a target="_blank" style="float:right" href="https://<% url %>" class="btn btn-sm btn-danger">Live Example</a>
-            <a target="_blank" style="float:right" href="#" class="btn btn-sm btn-success mr-2">Free</a>
+            <button style="float:right" class="btn btn-sm btn-success mr-2">Free</button>
             <h3><% name %></h3>
             <p><%{description}%></p>
             <h4 class="mb-0">Includes</h4>
