sites not templates

--- a/medium/profile.mustache
+++ b/medium/profile.mustache
@@ -217,7 +217,7 @@
                       <a href="#" class="sidebar-link" data-rel="about">About {{profile.firstName}}</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="all">Templates</a>
+                      <a href="#" class="sidebar-link" data-rel="all">Sites</a>
                   </li>
               </ul>
           </nav>
