--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -64,7 +64,7 @@
         <div class="mt-2 d-flex justify-content-between post-preview">
           <div class="pr-4">
             <div class="card-text text-muted small">
-                <a href="/profile/{{slug}}">{{ profile.username }}</a>
+                <a href="/profile/{{profile.slug}}">{{ profile.username }}</a>
                 <span style="margin:6px">&middot;</span>
                 <span>{{ dateString }}</span>
             </div>
