open profile in same window

--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -51,7 +51,7 @@
 
           {{#thread.profile.id}}
           <span style="margin:6px">&middot;</span>
-          <small>posted by <a target="_blank" style="text-decoration:none" href="/profile/{{thread.profile.slug}}">{{thread.profile.username}}</a></small>
+          <small>posted by <a style="text-decoration:none" href="/profile/{{thread.profile.slug}}">{{thread.profile.username}}</a></small>
           {{/thread.profile.id}}
 
         </div>
