--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -73,6 +73,12 @@
         padding: 9px;
         border-radius: 50%;
       }
+
+      @media (max-width: 568px){
+        .mobile-header {
+          font-size: 2.2rem;
+        }
+      }
 		</style>
 </head>
     <body>
@@ -107,7 +113,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
-                        <h1 class="dot-circle text-center">
+                        <h1 class="dot-circle text-center mobile-header">
                           More Than Just a Blog
                         </h1>
                         <div class="row mt-6">
