updated screenshots on landing page

--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -239,9 +239,9 @@
                     </div>
                     <div class="col-md-6 order-1 order-md-2">
                         <div class="text-center">
-                          <small><em><a target="_blank" style="color:blue" href="https://www.thedailydose.io/">The Daily Dose</a></em></small>
+                          <small><em><a target="_blank" style="color:blue" href="https://www.samoanraider.com/">SamoanRaider.com</a></em></small>
                         </div>
-                        <img src="https://lh3.googleusercontent.com/4nrUN7Jw4uPbCstMWFxqz2ROmu4dKySLGEy8Qw7Mn5CWmF7hEEHE4C6Td-6c3VDSnpvU9QUbwIllHdVQIInZVtS0W9g=s1024" class="img-fluid d-block mx-auto" alt="iMac"/>
+                        <img src="https://lh3.googleusercontent.com/An_nigymPg0b0by0iCQC12kk_LkSggJg-OYlQKOpQRkasEChChfhQJaO5mbJoerutcHvRRRVPuJJjxFAMu-jc14Apg=s1024" class="img-fluid d-block mx-auto" alt="iMac"/>
                     </div>
                 </div>
 
@@ -250,7 +250,7 @@
                       <div class="text-center">
                         <small><em>CMS Admin Console</em></small>
                       </div>
-                        <img src="https://lh3.googleusercontent.com/vkDQCbHJPDeo1CL89qjFGHEAvJ8vOkWb56e46-8ybziRGYblCIGmyhu5dbsyf-EfkZTpzS3omp-C99Xhedqunb3apw=s1024" class="img-fluid d-block mx-auto" alt="Vertex 360"/>
+                        <img src="https://lh3.googleusercontent.com/At6y2BkhC30Bo8giKp1sqmxJDlwrXZtLFIttDoCyotJe7WEEAlymf8cffPrOuIgxzdph_ucU2O2EnzyBUfo5UKgg=s1024" class="img-fluid d-block mx-auto" alt="Vertex 360"/>
                     </div>
                     <div class="col-md-6 my-md-auto">
                         <h1>Easy Maintenance</h1>
