hide get started button on mobile

--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -78,6 +78,10 @@
         .mobile-header {
           font-size: 2.2rem;
         }
+
+        .hidden-xs {
+          display: none !important;
+        }
       }
 		</style>
 </head>
@@ -93,15 +97,14 @@
                           Websites For the Modern Digital Age
                         </h1>
                         <p class="text-white lead mt-4">Vertex 360 launches websites for influencers, YouTubers, content creators, startups, podcasters or anyone who want to expand their online brand.</p>
-                        <br />
-                        <a href="/templates" class="mt-1 btn d-inline-flex flex-row align-items-center text-white btn-lg bg-success">
+                        <a href="/templates" class="mt-1 btn d-inline-flex flex-row align-items-center text-white btn-lg bg-success hidden-xs">
                             Get Started
                         </a>
                     </div>
-                    <div class="col-md-6 play-wrapper text-center">
+                    <div class="col-md-6 text-center">
                         <a href="/templates">
                           <small class="text-white">Chloe Template</small>
-                          <img src="https://lh3.googleusercontent.com/XtArYh3DbNYgV25qBYPdPspKI9DQjAfCYMPl65JEKuFq8br_PRxDW8SqECKuOUZ-tz5hNyVij7L90xwACcomP6bWHg=s1024" class="img-fluid d-block mx-auto" alt="Vertex 360" />
+                          <img src="https://lh3.googleusercontent.com/XtArYh3DbNYgV25qBYPdPspKI9DQjAfCYMPl65JEKuFq8br_PRxDW8SqECKuOUZ-tz5hNyVij7L90xwACcomP6bWHg=s1024" class="d-block mx-auto" alt="Vertex 360" />
                         </a>
                     </div>
                 </div>
