updated tempate landing page with ssl feature

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -180,6 +180,13 @@
                           Features can be used on an ad-hoc basis if you prefer another service for a specific area (for example <a target="_blank" href="https://cloudinary.com/">Cloudinary</a> for image hosting). By freeing up your attention from ancillary areas, you can spend more time creating great products and focusing on your users.
                         </p>
 
+                        <h2 class="display-4 font-oswald mt-5">Never See THIS Again</h2>
+                        <img style="width:100%" src="https://lh3.googleusercontent.com/WO-PCqBv4wl0ADY07TX1sIu2IUYP63pYnVFm8YWDrh6ABfPc9th8rEtHxUVphdgh-fn_uKjG6H2AVeipTVHLNLKAiQ=s1024" />
+                        <p class="lead mt-4">
+                            Expired SSL certificates and security issues immediately destroy your credibility as a trusted website and professional. Our sites are <em>automatically</em> updated
+                            for SSL encryption and will <strong>never</strong> show this warning which drives away valuable business.
+                        </p>
+
                     </div>
                     <!--end of col-->
                 </div>
