feature list width

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -148,7 +148,7 @@
                           This is where Turbo 360 comes in. All apps on deployed on Turbo 360 are equipped with support for the following:
                         </p>
 
-                        <ul class="list-unstyled list-spacing-sm m-auto features-list">
+                        <ul class="list-unstyled list-spacing-sm m-auto features-list w-50">
                             <li class="row">
                                 <div class="col-2 col-md-1"><i class="icon-check h5"></i>
                                 </div>
