render header and subheader text from promo config

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -18,11 +18,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
-                        <h1 class="display-4">Build stunning websites and apps</h1>
-                        <p class="lead">
-                            Meet Wingman, a robust suite of styled pages and components, powered by Bootstrap 4. The ideal starting point for product landing pages, stylish web-apps and complete company websites.
-                        </p>
-                        <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-success">View Preview &rsaquo;</a>
+                        <h1 class="display-4">{{promo.hero.header}}</h1>
+                        <p class="lead">{{promo.hero.subheader}}</p>
+                        <a target="_blank" href="#" class="btn btn-lg btn-success">View Live Demo &rsaquo;</a>
                     </div>
                     <!--end of col-->
                     <div class="col-12 col-md-6">
