--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -28,23 +28,23 @@
 
                             <div class="carousel-cell col-11">
                                 <div class="card card-sm bg-gradient border-0">
-                                    <a href="landing-1.html">
+                                    <a href="#">
                                         <img class="card-img-top" src="/wingman/img/overview/landing-1-hero.jpg" alt="Landing - One">
                                     </a>
                                     <div class="card-footer d-flex justify-content-between bg-white">
-                                        <a href="landing-1.html" class="h6 m-0">Landing - One</a>
-                                        <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                        <a href="#" class="h6 m-0">Landing - One</a>
+                                        <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="carousel-cell col-11">
                                 <div class="card card-sm bg-gradient border-0">
-                                    <a href="landing-2.html">
+                                    <a href="#">
                                         <img class="card-img-top" src="/wingman/img/overview/landing-2-hero.jpg" alt="Landing - Two">
                                     </a>
                                     <div class="card-footer d-flex justify-content-between bg-white">
-                                        <a href="landing-2.html" class="h6 m-0">Landing - Two</a>
-                                        <a target="_blank" href="landing-2.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                        <a href="#" class="h6 m-0">Landing - Two</a>
+                                        <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -73,11 +73,8 @@
 
                         </div>
                     </div>
-                    <!--end of col-->
                 </div>
-                <!--end of row-->
             </div>
-            <!--end of container-->
         </section>
 
 
@@ -85,8 +82,8 @@
             <div class="container">
                 <div class="row justify-content-center text-center section-intro">
                     <div class="col-12 col-md-9 col-lg-8">
-                        <h2 class="display-4">Attractive from every angle</h2>
-                        <span class="lead">Wingman delivers a seamless user experience, offering visual consistency for your brand, from landing to logged-in</span>
+                        <h2 class="display-4">{{promo.features.header}}</h2>
+                        <span class="lead">{{promo.features.subheader}}</span>
 
                     </div>
                     <!--end of col-->
@@ -94,42 +91,35 @@
                 <!--end of row-->
                 <ul class="row feature-list feature-list-sm">
                     <li class="col-12 col-md-4">
-                        <a href="pages-landing.html" class="card">
-                            <img alt="Image" src="/wingman/img/overview/landing-9-hero.jpg" class="img-fluid rounded" />
+                        <a href="#" class="card">
+                            <img alt="Image" src="{{{promo.features.preview_1.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
-                        <h5>Landing Pages</h5>
-                        <p>
-                            Impress potential customers and introduce your product using Wingman’s diverse, purpose-built landing pages
-                        </p>
-                        <a href="pages-app.html">View Preview &rsaquo;</a>
+                        <h5>{{promo.features.preview_1.header}}</h5>
+                        <p>{{promo.features.preview_1.description}}</p>
+                        <a target="_blank" href="{{{promo.features.preview_1.link}}}">View Preview &rsaquo;</a>
                     </li>
                     <!--end of col-->
+
                     <li class="col-12 col-md-4">
-                        <a href="pages-app.html" class="card">
-                            <img alt="Image" src="/wingman/img/overview/app-profile-social-hero.jpg" class="img-fluid rounded" />
+                        <a href="#" class="card">
+                            <img alt="Image" src="{{{promo.features.preview_2.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
-                        <h5>App Pages</h5>
-                        <p>
-                            A robust suite of styled app pages and flexible Bootstrap-based components makes Wingman ideal for building Apps
-                        </p>
-                        <a href="pages-app.html">View Preview &rsaquo;</a>
+                        <h5>{{promo.features.preview_2.header}}</h5>
+                        <p>{{promo.features.preview_2.description}}</p>
+                        <a target="_blank" href="{{{promo.features.preview_2.link}}}">View Preview &rsaquo;</a>
                     </li>
                     <!--end of col-->
+
                     <li class="col-12 col-md-4">
-                        <a href="pages-inner.html" class="card">
-                            <img alt="Image" src="/wingman/img/overview/company-simple-hero.jpg" class="img-fluid rounded" />
+                        <a href="#" class="card">
+                            <img alt="Image" src="{{{promo.features.preview_3.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
-                        <h5>Inner Pages</h5>
-                        <p>
-                            Landing pages are just the beginning. Wingman includes a collection of detailed inner pages to complete your online presence.
-                        </p>
-                        <a href="pages-app.html">View Preview &rsaquo;</a>
+                        <h5>{{promo.features.preview_3.header}}</h5>
+                        <p>{{promo.features.preview_3.description}}</p>
+                        <a target="_blank" href="{{{promo.features.preview_3.link}}}">View Preview &rsaquo;</a>
                     </li>
-                    <!--end of col-->
                 </ul>
-                <!--end of row-->
             </div>
-            <!--end of container-->
         </section>
 
 
