--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -26,10 +26,11 @@
                     <div class="col-12 col-md-6">
                         <div class="main-carousel overflow-visible" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":true, "wrapAround":true, "autoPlay":5000, "imagesLoaded":true, "initialIndex":3, "draggable":false }'>
 
+                            {{#promo.hero.screenshots}}
                             <div class="carousel-cell col-11">
                                 <div class="card card-sm bg-gradient border-0">
                                     <a href="#">
-                                        <img class="card-img-top" src="/wingman/img/overview/landing-1-hero.jpg" alt="Landing - One">
+                                        <img class="card-img-top" src="{{{.}}}=s1024-c" alt="Landing - One">
                                     </a>
                                     <div class="card-footer d-flex justify-content-between bg-white">
                                         <a href="#" class="h6 m-0">Landing - One</a>
@@ -37,6 +38,8 @@
                                     </div>
                                 </div>
                             </div>
+                            {{/promo.hero.screenshots}}
+
                             <div class="carousel-cell col-11">
                                 <div class="card card-sm bg-gradient border-0">
                                     <a href="#">
