remove sample screenshots

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -22,7 +22,7 @@
                         <p class="lead">{{promo.hero.subheader}}</p>
                         <a target="_blank" href="#" class="btn btn-lg btn-success">View Live Demo &rsaquo;</a>
                     </div>
-                    <!--end of col-->
+
                     <div class="col-12 col-md-6">
                         <div class="main-carousel overflow-visible" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":true, "wrapAround":true, "autoPlay":5000, "imagesLoaded":true, "initialIndex":3, "draggable":false }'>
 
@@ -30,49 +30,15 @@
                             <div class="carousel-cell col-11">
                                 <div class="card card-sm bg-gradient border-0">
                                     <a href="#">
-                                        <img class="card-img-top" src="{{{.}}}=s1024-c" alt="Landing - One">
+                                        <img class="card-img-top" src="{{{.}}}=s1024-c" alt="Screenshot">
                                     </a>
                                     <div class="card-footer d-flex justify-content-between bg-white">
-                                        <a href="#" class="h6 m-0">Landing - One</a>
+                                        <a href="#" class="h6 m-0">Screenshot</a>
                                         <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                     </div>
                                 </div>
                             </div>
                             {{/promo.hero.screenshots}}
-
-                            <div class="carousel-cell col-11">
-                                <div class="card card-sm bg-gradient border-0">
-                                    <a href="#">
-                                        <img class="card-img-top" src="/wingman/img/overview/landing-2-hero.jpg" alt="Landing - Two">
-                                    </a>
-                                    <div class="card-footer d-flex justify-content-between bg-white">
-                                        <a href="#" class="h6 m-0">Landing - Two</a>
-                                        <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-cell col-11">
-                                <div class="card card-sm bg-gradient border-0">
-                                    <a href="landing-8.html">
-                                        <img class="card-img-top" src="/wingman/img/overview/landing-8-hero.jpg" alt="Landing - Eight">
-                                    </a>
-                                    <div class="card-footer d-flex justify-content-between bg-white">
-                                        <a href="landing-8.html" class="h6 m-0">Landing - Eight</a>
-                                        <a target="_blank" href="landing-8.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-cell col-11">
-                                <div class="card card-sm bg-gradient border-0">
-                                    <a href="landing-9.html">
-                                        <img class="card-img-top" src="/wingman/img/overview/landing-9-hero.jpg" alt="Landing - Nine">
-                                    </a>
-                                    <div class="card-footer d-flex justify-content-between bg-white">
-                                        <a href="landing-9.html" class="h6 m-0">Landing - Nine</a>
-                                        <a target="_blank" href="landing-9.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
-                                    </div>
-                                </div>
-                            </div>
 
                         </div>
                     </div>
